  * ruby2.5-dev: Recommends: ruby2.5-doc
  * debian/rules:
    - run tests in verbose mode during build
    - drop explicit usage of autotools-dev
    - drop usage of autoreconf debhelper sequence, it's not needed anymore
      since we are now using a complete upstream release tarball
    - drop passing --baseruby to configure, since do not require an existing
      ruby anymore
  * autopkgtest: make use of the text exclusion rules under test/excludes/
  * Declare compatibility with Debian Policy 4.1.2; no changes needed
  * debian/tests/bundled-gems: handle extra field in gems/bundled_gems
  * Bump debhelper compatibility level to 10
    - change debian/rules to call ./configure directly, to use upstream's
      built-in multiarch support as before debhelper compatibility level 9

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Nov 2017 14:02:41 -0200

ruby2.5 (2.5.0~rc1-0nkmi1) unstable; urgency=medium

  * Ruby 2.5

 -- Sorah Fukumori <her@sorah.jp>  Thu, 14 Dec 2017 18:59:32 +0000

ruby2.4 (2.4.3-0nkmi1) unstable; urgency=medium

  * import 2.4.3

 -- Sorah Fukumori <her@sorah.jp>  Thu, 14 Dec 2017 18:00:03 +0000

ruby2.4 (2.4.2-0nkmi1) unstable; urgency=medium

  * import 2.4.2

 -- Sorah Fukumori <her@sorah.jp>  Thu, 14 Sep 2017 15:37:48 +0000

ruby2.4 (2.4.1-0nkmi1) unstable; urgency=medium

  * import 2.4.1

 -- Sorah Fukumori <her@sorah.jp>  Wed, 22 Mar 2017 15:44:37 +0000

ruby2.4 (2.4.0-0nkmi1) unstable; urgency=medium

  * Ruby 2.4!
  * Removed --dbgsym-migration from dh_strip

 -- Sorah Fukumori <her@sorah.jp>  Tue, 22 Nov 2016 18:23:16 +0000

ruby2.3 (2.3.3-0nkmi1) unstable; urgency=medium

  * new upstream version

 -- Sorah Fukumori <her@sorah.jp>  Tue, 22 Nov 2016 18:23:16 +0000

ruby2.3 (2.3.1-5nkmi6) unstable; urgency=medium

  * honor nocheck flag
    (porting d7218fd9adb2279c9e4b4f626dfeebaa34830add from debian)

 -- Sorah Fukumori <her@sorah.jp>  Mon, 21 Nov 2016 12:43:54 +0000

ruby2.3 (2.3.1-5nkmi5) unstable; urgency=medium
